IT-AUTOFLIGHT Changelog
Copyright (c) 2019 Joshua Davidson (Octal450)
I will note if new ITAF tuning or config is required. Simply check the "ITAF CONFIG.txt" file.

---------------------------------------------------------------------------------------------------------------------

V4.0.2:
[Nasal]
* Added: System resets automatically after flight complete
* Fixed: TOGA can sometimes erroneously disarm LNAV
* Fixed: LNAV Capture/Arm Logic

---------------------------------------------------------------------------------------------------------------------

V4.0.1:
[Control Loop]
* Fixed: Throttle servo used incorrect rates

[Nasal]
* Fixed: Bad FLCH engagement
* Fixed: Delay in updating modes causing some problems
* Changed: Minimum altitude error for FLCH engagement

---------------------------------------------------------------------------------------------------------------------

V4.0.0:
[Control Loop]
* Fixed: V/S internal being slowed while AP is not active

[Nasal]
* Added: Completely new controller
* Added: Mode reversion behavior when VOR or ILS signal is lost
* Fixed: LNAV stays active when route is lost or no longer active
* Fixed: True Course toggle accidently used instead of TRK toggle
* Fixed: Internal altitude takes too long to update
* Fixed: Sometimes, ALT CAP did not engage properly
* Fixed: Erroneous vertical mode could be selected in ALT HLD mode when no new altitude was set
* Fixed: Sometimes, a jerk occurs when engaging FLCH mode from ALT HLD
* Fixed: Flaw in control reset logic caused controls to be reset while control loop is running
* Changed: Cancelling LOC also cancels G/S
* Changed: G/A CLB no longer arms ALT CAP mode
* Changed: Auto bank limit logic
* Changed: G/A engagement after touchdown trips AP off

---------------------------------------------------------------------------------------------------------------------

V3.2.5:
[Control Loop]
* Fixed: FPA Overshoot from large errors