@@ -5,10 +5,14 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 ---------------------------------------------------------------------------------------------------------------------
 
 V4.0.2:
+[Control Loop]
+* Fixed: Drift calculation could calculate wrong when parked causing minor issues
+
 [Nasal]
 * Added: System resets automatically after flight complete
 * Fixed: TOGA can sometimes erroneously disarm LNAV
 * Fixed: LNAV Capture/Arm Logic
+* Fixed: HDG/TRK bug syncing did not work properly
 
 ---------------------------------------------------------------------------------------------------------------------
 
